# aria

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.codex/: auth.json.bak
.githooks/: pre-push
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260618_0001_initial.py  20260618_0002_provider_detection.py  20260618_0003_app_settings.py  20260618_0004_account_notes.py  20260618_0005_multi_api_keys.py  20260619_0006_api_key_label.py  20260619_0007_model_inference_results.py  20260619_0008_inference_latency.py  20260619_0009_inference_history.py
app/: __init__.py  __main__.py  checker.py  config.py  database.py  main.py  models.py  scheduler.py  security.py  services.py  validation.py  version.py
app/static/: app.css  app.js
app/templates/: _pagination.html  (+11 more)
deploy/: apichecker-backup-user.service  apichecker-backup-user.timer  apichecker-user.service  apichecker.logrotate  apichecker.service
docs/: DOCKER.md
scripts/: apichecker  aria  backup  docker-entrypoint  install-hooks  install-logrotate  install-user-service  prepare-release  restart-service  validate-release
tests/: conftest.py  test_about.py  test_account_detail.py  test_available_models.py  test_backup.py  test_checker.py  test_dashboard.py  test_docker.py  test_inference_results.py  test_pagination.py  test_provider_summary.py  test_providers_page.py  test_scheduler.py  test_security.py  test_services.py  test_settings.py  test_system.py  test_validation.py  test_verification.py  test_version.py
