[project]
name = "apichecker"
version = "1.0.1"
description = "ARIA: API Reliability & Inference Analyzer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.2",
  "cryptography==45.0.4",
  "fastapi==0.115.13",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.34.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*", "static/vendor/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
